--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/blob": "^2.0.0",
     "csv-parse": "^6.1.0",
     "next": "16.0.5",
     "papaparse": "^5.5.3",
